update examples for swagger
