# docs/swagger.yaml
@@ -2,7 +2,7 @@ basePath: /api/v1
 definitions:
   apperrors.DuplicateError:
     properties:
-      resource:
+      field:
         type: string
     type: object
   apperrors.InvalidInputError:
@@ -20,14 +20,12 @@ definitions:
   dto.CreateUserRequest:
     properties:
       email:
-        example: mike@example.com
         type: string
       username:
-        example: mike
         type: string
     required:
-      - email
-      - username
+    - email
+    - username
     type: object
   dto.PostSummaryResponse:
     properties:
@@ -35,7 +33,6 @@ definitions:
         description: |-
           PostID uuid.UUID `json:"post_id"`
           Title  string    `json:"title"`
-        example: 4e76b320-d5b7-4a0a-bb0f-2049fe6a91a7
         format: uuid
         type: string
       title:
@@ -52,55 +49,61 @@ definitions:
   dto.UserResponse:
     properties:
       email:
-        example: mike@example.com
         type: string
       joined_at:
-        example: "2025-07-18T15:04:05Z"
         type: string
       posts:
         items:
           $ref: '#/definitions/dto.PostSummaryResponse'
         type: array
       user_id:
-        example: b9e69a63-4f4b-4ea7-8c71-3b73fe62e6d7
-        format: uuid
         type: string
       username:
-        example: mike
         type: string
     type: object
   post.Post:
     properties:
       content:
+        example: My First Post Content
         type: string
       created_at:
+        example: "2025-07-18T15:04:05Z"
         type: string
       id:
-        description: '@swagger:strfmt uuid'
+        example: 4e76b320-d5b7-4a0a-bb0f-2049fe6a91a7
+        format: uuid
         type: string
       title:
+        example: My First Post
         type: string
       updated_at:
+        example: "2025-08-19T15:04:05Z"
         type: string
       userID:
+        example: 5e76b320-d5b7-4a0a-bb0f-2049fe3a91a4
         type: string
     required:
-      - content
-      - title
+    - content
+    - title
     type: object
   user.User:
     properties:
       created_at:
+        example: "2025-07-18T15:04:05Z"
         type: string
       email:
+        example: mike@example.com
         type: string
       id:
+        example: b9e69a63-4f4b-4ea7-8c71-3b73fe62e6d7
+        format: uuid
         type: string
       posts:
         items:
           $ref: '#/definitions/post.Post'
         type: array
       username:
+        example: mike
         type: string
     type: object
 host: localhost:8080
@@ -117,7 +120,7 @@ paths:
     get:
       description: Get all users in the system
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -127,20 +130,20 @@ paths:
             type: array
       summary: Get all users
       tags:
-        - users
+      - users
     post:
       consumes:
-        - application/json
+      - application/json
       description: Creates a new user and returns the created resource
       parameters:
-        - description: User data
-          in: body
-          name: user
-          required: true
-          schema:
-            $ref: '#/definitions/dto.CreateUserRequest'
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUserRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -156,42 +159,45 @@ paths:
             $ref: '#/definitions/apperrors.DuplicateError'
       summary: Create a new user
       tags:
-        - users
+      - users
   /users/{id}:
     delete:
       consumes:
-        - application/json
+      - application/json
       description: Deletes an existing user
       parameters:
-        - description: User ID
-          format: uuid
-          in: path
-          name: id
-          required: true
-          type: string
+      - description: User ID
+        format: uuid
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apperrors.InvalidInputError'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/apperrors.NotFoundError'
       summary: Delete user by ID
       tags:
-        - users
+      - users
     get:
       description: Get the user with the specified ID
       parameters:
-        - description: User ID
-          format: uuid
-          in: path
-          name: id
-          required: true
-          type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -207,26 +213,26 @@ paths:
             $ref: '#/definitions/apperrors.NotFoundError'
       summary: Get user by ID
       tags:
-        - users
+      - users
     patch:
       consumes:
-        - application/json
+      - application/json
       description: Updates an existing user and returns the updated resource
       parameters:
-        - description: User ID
-          format: uuid
-          in: path
-          name: id
-          required: true
-          type: string
-        - description: User update data
-          in: body
-          name: user
-          required: true
-          schema:
-            $ref: '#/definitions/dto.UpdateUserRequest'
+      - description: User ID
+        format: uuid
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User update data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateUserRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -235,12 +241,12 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/apperrors.InvalidInputError'
+            $ref: '#/definitions/apperrors.DuplicateError'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/apperrors.NotFoundError'
       summary: Update user by ID
       tags:
-        - users
+      - users
 swagger: "2.0"
